examples/taint-checking/taint_checking.out
# At the command line, navigate to the directory that contains
# the `.bal` file and run the `ballerina run` command.
$ ballerina run taint_checking.bal
error: ./taint_checking.bal:32:12: tainted value passed to sensitive parameter 'sqlQuery'
error: ./taint_checking.bal:36:32: tainted value passed to sensitive parameter 'secureParameter'
error: ./taint_checking.bal:55:36: tainted value passed to sensitive parameter 'secureParameter'
error: ./taint_checking.bal:60:36: tainted value passed to sensitive parameter 'secureParameter'
compilation contains errors
